--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 4.1.1)
 # Configure Clang
 set(CMAKE_C_COMPILER "clang-18")
 set(CMAKE_CXX_COMPILER "clang++-18")
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(bonk)
 
