feat: correctly implement spring sim (lol)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,10 @@ add_executable(${PROJECT_NAME} ${sources})
 target_compile_options(${PROJECT_NAME} PUBLIC -std=c++2a -Wall -Werror)
 
 find_package(Eigen3 REQUIRED)
-target_link_libraries(${PROJECT_NAME} PUBLIC ${Eigen_LIBRARIES})
+
+# Non-system deps
+include(FetchContent)
+FetchContent_Declare(libnpy GIT_REPOSITORY https://github.com/matajoh/libnpy GIT_TAG v1.5.3)
+FetchContent_MakeAvailable(libnpy)
+
+target_link_libraries(${PROJECT_NAME} PUBLIC ${Eigen_LIBRARIES} npy::npy)
