--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,9 @@ find_package(iir REQUIRED)
 
 # Non-system deps
 include(FetchContent)
-FetchContent_Declare(libnpy GIT_REPOSITORY https://github.com/matajoh/libnpy GIT_TAG v1.5.3)
-FetchContent_MakeAvailable(libnpy)
+set(HTTPLIB_USE_NON_BLOCKING_GETADDRINFO NO) # Fails to link if this is YES, which is the default
+FetchContent_Declare(libnpy GIT_REPOSITORY https://github.com/matajoh/libnpy.git GIT_TAG v1.5.3)
+FetchContent_Declare(httplib GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git GIT_TAG v0.26.0)
+FetchContent_MakeAvailable(libnpy httplib)
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${Eigen_LIBRARIES} fmt::fmt npy::npy iir::iir)
+target_link_libraries(${PROJECT_NAME} PUBLIC ${Eigen_LIBRARIES} fmt::fmt npy::npy iir::iir httplib::httplib)
