feat: use event struct

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "cmake.enableAutomaticKitScan": false,
-    "cmake.generator": "Unix Makefiles",
-    "clangd.path": "clangd-18"
+  "cmake.enableAutomaticKitScan": false,
+  "cmake.generator": "Unix Makefiles",
+  "clangd.path": "clangd-18",
+  "explorer.sortOrder": "default"
 }
