feat: add soxrpp, use float instead of double

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "cmake.enableAutomaticKitScan": false,
   "cmake.generator": "Unix Makefiles",
   "clangd.path": "clangd-18",
-  "explorer.sortOrder": "default"
+  "explorer.sortOrder": "default",
+  "editor.formatOnSave": true
 }
