--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,8 @@ FetchContent_Declare(libnpy GIT_REPOSITORY https://github.com/matajoh/libnpy.git
 FetchContent_Declare(httplib GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git GIT_TAG v0.26.0)
 FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.12.0/json.tar.xz)
 FetchContent_Declare(base64 GIT_REPOSITORY https://github.com/tobiaslocker/base64.git GIT_TAG 0d0f5a8849a954d96af7befdb5c4014e78ecc9e2)
-FetchContent_MakeAvailable(libnpy httplib json base64)
+FetchContent_declare(soxrpp GIT_REPOSITORY https://github.com/Jklein64/soxrpp.git GIT_TAG main)
+FetchContent_MakeAvailable(libnpy httplib json base64 soxrpp)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
     ${Eigen_LIBRARIES} 
@@ -47,4 +48,5 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
     nlohmann_json::nlohmann_json
     spdlog::spdlog
     base64
+    soxrpp::soxrpp
 )
