--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,8 +23,9 @@
 		"vscode": {
 			"extensions": ["ms-vscode.cmake-tools", "llvm-vs-code-extensions.vscode-clangd"]
 		}
-	}
+	},
 
 	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "devcontainer"
+	"remoteUser": "ubuntu",
+	"workspaceFolder": "/workspaces/CS 4621"
 }
